--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,9 @@
   "packages": [
     "packages/*"
   ],
-  "version": "independent"
+  "version": "independent",
+  "publish": {
+    "message": "chore(release): publish",
+    "registry": "https://registry.npmjs.org/"
+  }
 }
