--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "private": true,
   "devDependencies": {
     "lerna": "^3.22.1"
+  },
+  "scripts": {
+    "bootstrap": "npx lerna bootstrap",
+    "publish": "npx lerna publish from-package --yes"
   }
 }
