fix：安装依赖到根目录

--- a/lerna.json
+++ b/lerna.json
@@ -3,8 +3,12 @@
     "packages/*"
   ],
   "version": "independent",
+  "command": {
+    "bootstrap": {
+      "hoist": true
+    }
+  },
   "publish": {
-    "message": "chore(release): publish",
     "registry": "https://registry.npmjs.org/"
   }
 }
