--- a/packages/lerna-pkg-core/package.json
+++ b/packages/lerna-pkg-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lerna-pkg-core",
-  "version": "1.2.0",
+  "version": "1.2.1-alpha.0",
   "description": "> TODO: description",
   "author": "mind <mind.wang@lixinchuxing.com>",
   "homepage": "https://github.com/mind029/lerna-example#readme",
